# nes-emulator

./: CMakeLists.txt
include/: BitOperations.h  Cpu.h  Memory.h  Opcodes.h
src/: BitOperations.hpp  CMakeLists.txt  Cpu.cpp  Cpu.hpp  Memory.hpp  Opcodes.cpp  Opcodes.hpp
tests/: CMakeLists.txt  CpuTests.cpp  Test_Main.cpp
tests/opcodes/: BitwiseTests.cpp  BranchTests.cpp  MathTests.cpp  RegisterTests.cpp  StackTests.cpp  StorageTests.cpp  SystemTests.cpp
